<resources>
    <string name="app_name">Movie Notifier</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="settings">Settings</string>
    <string name="viewedit">View &amp; edit details</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="settings_general">General</string>
    <string name="settings_general_darktheme_title">Theme</string>
    <string name="settings_general_darktheme_light">Light</string>
    <string name="settings_general_darktheme_dark">Dark</string>
    <string name="settings_general_darktheme_batterysaver">Set by Battery Saver</string>
    <string name="settings_general_darktheme_system">Use system default</string>
    <string name="settings_general_location_title">Default location for new watchers</string>
    <string name="settings_general_location_default">Not set</string>
    <string name="settings_general_location_service_title">Update cinema locations list</string>
    <string name="settings_general_location_service_lastupdate">Last updated: %1$s</string>
    <string name="settings_general_location_service_never">never</string>
    <string name="settings_general_location_service_updating">Updating…</string>
    <string name="settings_general_location_autocomplete">Sort watcher location suggestions by distance from my location</string>
    <string name="settings_general_location_automagic">Use my location to make automagic sorting smarter</string>
    <string name="settings_general_location_suggestion_autocomplete">Tap to improve location suggestions by allowing Movie Notifier to use your location</string>
    <string name="settings_general_location_suggestion_automagic">Tap to make automagic sorting smarter by allowing Movie Notifier to use your location</string>
    <string name="settings_general_location_permission_rationale">We\'ll need access to your location to enable this feature</string>
    <string name="settings_general_location_permission_denied">Sorry, but this feature won\'t work without access to your location</string>
    <string name="settings_general_location_permission_systemsettings">Allow</string>
    <string name="settings_licenses">Licenses</string>
    <string name="settings_about_title">About</string>
    <string name="settings_about_name">Movie Notifier Android</string>
    <string name="settings_about_version">Version %1$s, build %2$s</string>
    <string name="settings_about_copyright">App © Joris Pelgröm\nService © Sijmen Huizenga</string>
    <string name="settings_about_github"><a href='https://github.com/jpelgrom/Movie-Notifier-Android'>View source code</a></string>
    <string name="account_start_title">Hi there!</string>
    <string name="account_start_subtitle">Welcome to Movie Notifier</string>
    <string name="account_start_login_text">Have you used the app before? Log in using your Movie Notifier account to manage your watchers.</string>
    <string name="account_start_signup_text">New here? No problem, signing up is super quick and you\'ll be able to start using the app in less than a minute.</string>
    <string name="account_login_title">Log in using your Movie Notifier account</string>
    <string name="account_login_subtitle">Good to see you again!</string>
    <string name="account_signup_title">Create a new account</string>
    <string name="account_signup_subtitle">You\'re already almost done</string>
    <string name="account_signup_notifications">How do you want to be notified about new showings?</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="add">Add</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="watchers_title">Watchers</string>
    <string name="watchers_empty_title">No watchers found</string>
    <string name="watchers_empty_filters">Change your filter to view other watchers you already have. Create a new watcher using the button in the bottom-right corner.</string>
    <string name="watchers_empty_add">Add one now using the button in the bottom-right corner to get instant notifications when tickets go on sale.</string>
    <string name="watchers_empty_account">Sorry, you need an account to do that</string>
    <string name="watchers_list_subtitle_date">%s Showings %s – %s</string>
    <string name="watchers_bottomsheet_watcher_dates">Showings %s – %s</string>
    <string name="watchers_bottomsheet_watcher_active_future">%s Watcher is planned to start on %s</string>
    <string name="watchers_bottomsheet_watcher_active_now">%s Watcher is looking until %s</string>
    <string name="watchers_bottomsheet_watcher_active_past">%s Watcher is archived since %s</string>
    <string name="watchers_bottomsheet_sort_title">Sort watchers</string>
    <string name="watchers_bottomsheet_sort_auto">Automagically</string>
    <string name="watchers_bottomsheet_sort_begin">Start looking date</string>
    <string name="watchers_bottomsheet_sort_end">Stop looking date</string>
    <string name="watchers_bottomsheet_sort_startafter">First showing</string>
    <string name="watchers_bottomsheet_sort_az">Alphabetically</string>
    <string name="watchers_bottomsheet_filter_title">Filter watchers</string>
    <string name="watchers_bottomsheet_filter_all">All watchers</string>
    <string name="watchers_bottomsheet_filter_future">Planned watchers</string>
    <string name="watchers_bottomsheet_filter_now">Currently active watchers</string>
    <string name="watchers_bottomsheet_filter_past">Archived watchers</string>
    <string name="watcher_add_short">New watcher</string>
    <string name="watcher_add_long">Create a new watcher</string>
    <string name="watcher_basics_title">Basics</string>
    <string name="watcher_basics_name">Name</string>
    <string name="watcher_basics_movieid">Movie number</string>
    <string name="watcher_basics_cinemaid">Location</string>
    <string name="watcher_date_title">When?</string>
    <string name="watcher_date_title_begin">Look for showings and alert me between:</string>
    <string name="watcher_date_title_dialog">Look for showings and alert me</string>
    <string name="watcher_filter_title_startafter">Notify me about showings starting between:</string>
    <string name="watcher_filter_title_startafter_dialog">Notify me about showings starting</string>
    <string name="watcher_filter_heading_experience">Experience</string>
    <string name="watcher_filter_title_regularshowing">Normal</string>
    <string name="watcher_filter_title_imax">IMAX</string>
    <string name="watcher_filter_title_dolbycinema">Dolby Cinema</string>
    <string name="watcher_filter_title_4dx">4DX</string>
    <string name="watcher_filter_title_screenx">ScreenX</string>
    <string name="watcher_filter_title_2d">2D</string>
    <string name="watcher_filter_title_3d">3D</string>
    <string name="watcher_filter_heading_projection">Projection</string>
    <string name="watcher_filter_title_4k">4K</string>
    <string name="watcher_filter_title_laser">Laser</string>
    <string name="watcher_filter_title_hfr">HFR</string>
    <string name="watcher_filter_heading_audio">Audio</string>
    <string name="watcher_filter_title_dolbyatmos">Dolby Atmos</string>
    <string name="watcher_filter_title_ov">Original language version</string>
    <string name="watcher_filter_title_nl">Dutch language version</string>
    <string name="watcher_filter_value_yes">Required</string>
    <string name="watcher_filter_value_nopreference">No preference</string>
    <string name="watcher_filter_value_no">Absolutely not</string>
    <string name="watcher_discard">Discard changes?</string>
    <string name="watcher_validate_name">Please enter a name, 3–50 characters long</string>
    <string name="watcher_validate_movieid">Please enter a valid movie number</string>
    <string name="watcher_validate_cinemaid">Please enter a valid location</string>
    <string name="watcher_validate_begin">Also changed start date, looking period can be up to one month</string>
    <string name="watcher_validate_end">Also changed stop date, looking period can be up to one month</string>
    <string name="watcher_validate_startafter">Also changed start date, search period can be up to 2 weeks</string>
    <string name="watcher_validate_startbefore">Also changed end date, search period can be up to 2 weeks</string>
    <string name="watcher_saved">Watcher saved</string>
    <string name="watcher_share">Share watcher via</string>
    <string name="watcher_duplicate">Copied and ready to save as a new watcher</string>
    <string name="watcher_copy">%s copy</string>
    <string name="watcher_delete_confirm">Are you sure that you want to delete this watcher? You will no longer receive notifications for this watcher and it will be removed from your list of watchers.</string>
    <string name="watcher_delete_success">Watcher deleted</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_empty_title">No notifications received</string>
    <string name="notifications_empty_text">Once you receive push notifications for your watchers, you\'ll see them here.</string>
    <string name="notifications_channel_watchers_push_title">Watcher push notifications</string>
    <string name="notifications_channel_watchers_push_description">Notifications for new showings that are found for your watchers</string>
    <string name="notifications_notification_matches">+%d matches</string>
    <string name="notifications_notification_matchesandbody">+%1$d matches\n%2$s</string>
    <string name="notifications_notification_appbody">%1$s\n+%2$d matches\n\n%3$s</string>
    <string name="notifications_notification_action_pathe">Open Pathé</string>
    <string name="notifications_notification_action_view">View watcher</string>
    <string name="users_title">Users</string>
    <string name="user_active">Active</string>
    <string name="user_add_title">Add an user</string>
    <string name="user_add_subtitle">Log in or sign up</string>
    <string name="user_input_name">Username</string>
    <string name="user_input_email">Email address</string>
    <string name="user_input_password">Password</string>
    <string name="user_validate_name_length">A username must be 4–16 characters long</string>
    <string name="user_validate_name_regex">Usernames can only contain a–z, 0–9, and only a–z in the first 4 characters</string>
    <string name="user_validate_email">Please enter a valid email address</string>
    <string name="user_validate_password">Passwords need to be at least 8 characters long</string>
    <string name="user_validate_notifications">You haven\'t enabled any notifications, which means that if we find new showings for you, you won\'t be notified. Are you sure that you want to continue?</string>
    <string name="user_settings_general_switch">Switch to this account</string>
    <string name="user_settings_general_switch_success">Switched active account</string>
    <string name="user_settings_notifications_push">Push notifications on this device</string>
    <string name="user_settings_notifications_email">Notifications via email</string>
    <string name="user_privacy_general">Your data is stored securely and will only be used to allow you to use Movie Notifier. We may share data with a third party in order to deliver notifications, limited to what is necessary to do so. You can update or delete your account at any time in the app.</string>
    <string name="error_login_401">Your username and/or password is incorrect.</string>
    <string name="error_general_message">Oops! We encountered an issue. Please try again. You may find this information useful:\n%1$s</string>
</resources>