<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nl.jpelgrm.movienotifier.ui.MainActivity">
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="100"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="200"
        android:icon="@drawable/ic_filter_list"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>
