<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:indeterminate="true"
        android:layout_marginTop="-6dp"
        android:visibility="gone"
        tools:visibility="visible"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="?attr/listPreferredItemPaddingRight"
            android:paddingStart="?attr/listPreferredItemPaddingLeft"
            android:paddingBottom="@dimen/scroll_padding"
            android:animateLayoutChanges="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_marginTop="48dp"
                android:text="@string/account_login_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_marginBottom="64dp"
                android:text="@string/account_login_subtitle"/>

            <TextView
                android:id="@+id/error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextError"
                android:layout_marginBottom="16dp"
                android:visibility="gone"
                tools:text="@string/error_login_401"
                tools:visibility="visible"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_input_name"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_input_password"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="text|textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/go"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>