<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?listPreferredItemHeightSmall"
            android:text="@string/users_title"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:paddingStart="?listPreferredItemPaddingLeft"
            android:paddingEnd="?listPreferredItemPaddingRight"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="center_vertical"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/accountsRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/accountFlow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="?attr/listPreferredItemHeight"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingEnd="?attr/listPreferredItemPaddingRight"
            android:paddingStart="?attr/listPreferredItemPaddingLeft"
            android:paddingTop="8dp"
            android:background="?selectableItemBackground">

            <TextView
                android:id="@+id/accountName"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/user_add_title" />

            <TextView
                android:id="@+id/accountStatus"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:text="@string/user_add_subtitle" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>